Changed the width of the `content` div, so fix a vertical alignment problem with the collaboration div.

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -37,6 +37,7 @@ a
   position: absolute
   left: 20px
   top: 60px
+  width: 100%
   height: 300px
 
 .collaboration-div
